Kubernetes/keel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: monitoring
  labels:
    app: keel
spec:
  selector:
    app: keel
  type: LoadBalancer
  ports:
    - port: 9300
      targetPort: 9300
      nodePort: 30930
      protocol: TCP
      name: keel
