Kubernetes/keel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: keel.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keel
            port:
              number: 9300
